--- a/examples/index.html
+++ b/examples/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="utf-8">
   <title>details-menu demo</title>
-  <script src="../dist/index.umd.js"></script>
 </head>
 <body>
   <details>
@@ -16,5 +15,8 @@
       </ul>
     </details-menu>
   </details>
+
+  <!-- <script src="../dist/index.umd.js"></script> -->
+  <script type="text/javascript" src="https://unpkg.com/@github/details-menu-element@latest"></script>
 </body>
 </html>
