--- a/examples/index.html
+++ b/examples/index.html
@@ -63,7 +63,7 @@
   <script type="text/javascript">
     document.addEventListener('details-menu-selected', e => console.log(e))
   </script>
-  <!-- <script src="../dist/index.umd.js"></script> -->
-  <script type="text/javascript" src="https://unpkg.com/@github/details-menu-element@latest"></script>
+  <!-- <script type="module" src="../dist/index.js"></script> -->
+  <script type="module" src="https://unpkg.com/@github/details-menu-element@latest?module"></script>
 </body>
 </html>
