--- a/examples/index.html
+++ b/examples/index.html
@@ -69,7 +69,7 @@
   <details>
     <summary data-menu-button autofocus>Autofocus picker</summary>
     <details-menu>
-      <input type="text" placeholder="Autofocus wannabe filter" autofocus />
+      <input type="text" autofocus />
       <button type="submit" name="robot" value="Hubot" role="menuitemradio" data-menu-button-text>Hubot</button>
       <button type="submit" name="robot" value="Bender" role="menuitemradio" data-menu-button-text>Bender</button>
       <button type="submit" name="robot" value="BB-8" role="menuitemradio" data-menu-button-text>BB-8</button>
