Add spans to better reproduce production scenarios.

--- a/examples/index.html
+++ b/examples/index.html
@@ -39,11 +39,15 @@
     <details>
       <summary>Best robot: <span data-menu-button>Unknown</span></summary>
       <details-menu>
-        <label tabindex="0" role="menuitemradio" data-menu-button-text><input type="radio" name="robot" /> Hubot</label>
-        <label tabindex="0" role="menuitemradio" data-menu-button-text
-          ><input type="radio" name="robot" /> Bender</label
-        >
-        <label tabindex="0" role="menuitemradio" data-menu-button-text><input type="radio" name="robot" /> BB-8</label>
+        <label tabindex="0" role="menuitemradio" data-menu-button-text>
+          <span><input type="radio" name="robot" /> Hubot</span>
+        </label>
+        <label tabindex="0" role="menuitemradio" data-menu-button-text>
+          <span><input type="radio" name="robot" /> Bender</span>
+        </label>
+        <label tabindex="0" role="menuitemradio" data-menu-button-text>
+          <span><input type="radio" name="robot" /> BB-8</span>
+        </label>
       </details-menu>
     </details>
 
